--- a/src/main/webapp/css/itemPage.css
+++ b/src/main/webapp/css/itemPage.css
@@ -41,13 +41,18 @@ li.menu {
 }
 
 #sidebar {
-	border-left : 1px gray solid;
+	border-top : 1px gray solid;
 	float: left;
 	width: 30%;
 	height :1000px;
 }
 
 .search-form {
+	margin: 30px 100px;
+}
+
+.cart {
+	border-top : 1px gray solid;
 	margin: 30px 100px;
 }
 
