--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -21,10 +21,11 @@ a {
 	background-image: url("http://analoggamestudies.org/wordpress/wp-content/uploads/2017/01/25533082713_c58053f4d5_o-672x372.jpg");
 	background-size:cover;
 	color:white;
+	text-align : center ;
 }
 
 .top-wrapper h1 {
-	opacity :0.7;
+	opacity :0.9;
 	font-size : 45px;
 	letter-spacing :5px;
 }
@@ -32,9 +33,15 @@ a {
 
 .btn {
 	display : inline-block;
-	padding : 8px 24px ;
+	padding : 8px 30px ;
+	font-size : 18px ;
 	color : white ;
-	opacity : 0.8 ;
+	opacity : 0.9 ;
+	border-radius : 20px ;
+}
+
+.btn:hover{
+	opacity : 1 ;
 }
 
 .signup {
